<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">白果</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- bottom -->
    <string name="tab_1">知识</string>
    <string name="tab_2">康复服务</string>
    <string name="tab_3">我的医生</string>
    <string name="tab_4">我的档案</string>
    <string name="tab_5">健康生活</string>
    <!-- 知识Tab -->
    <string name="zhishitab_1">卒中资讯</string>
    <string name="zhishitab_2">康复指导</string>
    <string name="zhishitab_3">案例分享</string>
    <string name="user_infos">基本信息</string>
    <string name="user_cases">我的病史</string>
    <string name="user_tests">辅助检查</string>
    <string name="user_visit">随访记录</string>
    <string name="version_info">1.2.0</string>
    <string name="update_notice">温馨提示</string>
    <string name="update_text">检测到新版本，是否更新？</string>
    <string name="action_search">搜索</string>
    <string name="register">注册</string>
    <string name="register_account">注册账号</string>
    <string name="get_back_password">找回密码</string>
    <string name="guest_account">游客账号</string>
    <string name="register_immi">立即注册</string>
    <string name="tag">设置标签</string>
    <string name="delTag">删除标签</string>
    <string name="exit">退出</string>
    <string name="back">返回</string>
    <string name="username">用户名：</string>
    <string name="password">密　码：</string>
    <string name="login">登  录</string>
    <string name="login_now">立即登录</string>
    <string name="logout">退出登录</string>
    <string name="storepassword">记住密码</string>
    <string name="confirm">提交</string>
    <string name="next_step">下一步</string>
    <string name="audit_text">请审核我的工作</string>
    <string name="viewpager">ViewPager</string>

    <!-- start -->
    <string name="no_user">没有账号？用手机注册</string>
    <string name="use_wifi">直接使用迈外迪免费WiFi！</string>
    <string name="username_hint">账号</string>
    <string name="account_hint">手机号码</string>
    <!-- <string name="account_desc">由3-12位数字和字母（区分大小写）组成</string> -->
    <string name="account_desc">请填写正确的手机号码</string>
    <string name="login_password_desc">至少六位字符</string>
    <string name="login_password_hint">登录密码</string>
    <string name="password_hint">密码</string>
    <string name="set_password_hint">密码</string>
    <string name="old_password_hint">请输入当前密码</string>
    <string name="new_password_hint">请输入新密码</string>
    <string name="re_password_hint">确认密码</string>
    <string name="msg_hint">短信验证码</string>
    <string name="get_verify">获取短信验证码</string>
    <string name="verify_wrong">验证码错误</string>
    <string name="agree_text">同意无线网络服务条款</string>
    <string name="settings">设置</string>
    <string name="search">搜索</string>
    <string name="aboutus">关于我们</string>
    <string name="push_notify">推送通知</string>
    <string name="check_update">检查更新</string>
    <string name="feed_back">意见反馈</string>
    <string name="feed_back_req">问题反馈</string>
    <string name="about_us">关于我们</string>
    <string name="about">关于</string>
    <string name="upload">上传</string>
    <string name="download">下载</string>
    <string name="start_camera_error">启动相机失败</string>
    <string name="pic_limit_text">网络颠簸，建议单个附件大小不超过5M</string>
    <string name="upload_pic">上传图片</string>
    <string name="device_state_normal">正常运行</string>
    <string name="device_state_15m">超过15分钟未运行</string>
    <string name="device_state_1h">超过1小时未运行</string>
    <string name="device_state_1day">超过1天未运行</string>
    <string name="go_mydevice">查看我的设备</string>
    <string name="device_no_pemission">此设备已被其它商户添加，没有权限查看此设备</string>
    <string name="scan_txm">扫描条形码</string>
    <string name="scan">扫一扫</string>
    <string name="day_limit">只能查询最近30天的数据</string>
    <string name="day_limit2">查询日期不能大于当天</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="enum_2">\u3000\u3000</string>
    <string name="edit_user">用户信息修改</string>
    <string name="edit_pwd">密码修改</string>
    <string name="reload">重新加载</string>
    <string name="no_net">联网失败，请重试</string>
    <string name="appointment">预约</string>
    <string name="sign">到店签到</string>
    <string name="fault_fenxi">故障分析</string>
    <string name="check_data">验收数据</string>
    <string name="upload_img">上传图片</string>
    <string name="leave_sign">离店签到</string>
    <string name="confirm_success">提交成功</string>
    <string name="confirm_fail">提交失败</string>
    <string name="comment_success">评论成功</string>
    <string name="create_medchart">创建病例</string>
    <string name="medchart_detail">病例详情</string>
    <string name="center_tab_2">临床路径</string>
    <string name="create_readpic">创建病例读片</string>
    <string name="re_password">修改密码</string>
    <string name="re_password_notice">请先修改密码</string>
    <string name="modi_password">修改密码</string>
    <string name="refresh_succeed">刷新成功</string>
    <string name="refresh_fail">刷新失败</string>
    <string name="pullup_to_load">上拉加载更多</string>
    <string name="release_to_load">释放立即加载</string>
    <string name="loading">正在加载...</string>
    <string name="confirming">正在提交...</string>
    <string name="load_succeed">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string name="mobile_hint">请输入手机号</string>
    <string name="yzm_hint">请输入验证码</string>
    <string name="mobile_yzm">验证码</string>
    <string name="contentDescription">描述</string>
    <!-- UserInfo -->
    <string name="status">状        态：</string>
    <string name="add_time">添加时间：</string>
    <string name="update_time">更新时间：</string>
    <string name="card">就诊卡号</string>
    <string name="rname">姓            名</string>
    <string name="sex">性        别：</string>
    <string name="birthdate">出生日期</string>
    <string name="phone">联系电话</string>
    <string name="email">电子邮箱</string>
    <string name="address">通讯地址</string>
    <string name="birthday">身份证号</string>
    <string name="height">身高</string>
    <string name="weight">体重</string>
    <string name="area">所在地区</string>
    <string name="marriage">婚姻状况</string>
    <string name="drink">是否饮酒：</string>
    <string name="drinktime">饮酒频率：</string>
    <string name="drinknumber">饮酒量/次：</string>
    <string name="drinkdegree">酒精度数：</string>
    <string name="allergy">过敏史(1有,2无)：</string>
    <string name="allergys">添加过敏史：</string>
    <string name="operation">手术史(1有,2无)：</string>
    <string name="operations">添加手术史：</string>
    <string name="blood">输血史(1:有,2无)：</string>
    <string name="family">家族史(关系/是否健在/疾病)：</string>
    <string name="drug">药物临床试验史(1有,2无)：</string>
    <string name="drugs">添加药物临床试验史:</string>
    <string name="drugtest">是否参加药物临床试验史(1:是,2:否)：</string>
    <string name="stime">开始时间：</string>
    <string name="etime">结束时间：</string>
    <string name="age">年        龄</string>
    <string name="openstatus">开户状态：</string>
    <string name="bloods">添加输血史：</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="interaction_details">互动详情</string>

    <!-- 友盟 -->
    <string name="app_key">23315658</string>
    <string name="UMENG_CHANNEL">Umeng</string>
    <string name="umeng_appkey">569b898ce0f55a457d0007c6</string>
    <string name="title_activity_interaction_details">InteractionDetailsActivity</string>

    <string-array name="sex">
        <item>男</item>
        <item>女</item>
    </string-array>

    <!-- 运动 -->
    <string name="menu_settings">设置</string>
    <string name="step_number">步\t数</string>
    <string name="use_time">用\t时</string>
    <string name="distance">行 程</string>
    <string name="calories">热 量</string>
    <string name="velocity">速 度</string>
    <string name="zero">0</string>
    <string name="double_zero">0.0</string>
    <string name="calories_zero">0.0</string>
    <string name="velocity_zero">0.0</string>
    <string name="km">m</string>
    <string name="calorie">卡路里</string>
    <string name="kilometer_per_hour">m/s</string>
    <string name="start">开始</string>
    <string name="pause">暂停</string>
    <string name="_cancel">清零</string>
    <string name="daily">今日累积</string>
    <string name="image_star">image_star</string>
    <string name="sunday">星期天</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thursday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="month">月\t</string>
    <string name="day">日</string>
    <string name="todo">TODO</string>
    <string name="information">说明</string>
    <string name="settings_title">设置</string>
    <string name="sensitivity">灵敏度：</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="sensitivity_info">灵敏度越高,对身体的动作越敏感.请调节灵敏度来适应不同的体形,路面等因素.</string>
    <string name="step_length">步长:</string>
    <string name="cm">厘米</string>
    <string name="setp_length_info_1">为估算行走的距离和速度，请输入步长</string>
    <string name="setp_length_info_2">(得出的速度和距离较为粗略，仅供参考)</string>
    <string name="weigth">体重:</string>
    <string name="kg">公斤</string>
    <string name="weight_info">为计算消耗的热量(卡路里)，请入体重。</string>
    <string name="save">保存</string>
    <string name="cancle">取消</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- 健康生活 -->
    <string name="health_life">跟我走吧\n            今天就出发</string>
    <string name="health_life1">健康生活</string>
    <string name="title_activity_rank">Rank</string>
    <string name="title_activity_shop_details">ShopDetails</string>

</resources>