<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeef0"
    android:clipToPadding="true"
    android:fitsSystemWindows="true"
    android:orientation="vertical" >

    <!-- 注册界面 -->

    <include
        android:id="@+id/line_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/common_top" />

    <LinearLayout
        android:id="@+id/line_top"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="0.3"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:src="@drawable/login_logo" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/line_center"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_weight="0.55"
        android:orientation="vertical"
        android:paddingTop="10dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_username"
                style="@style/login_et_style"
                android:layout_width="fill_parent"
                android:layout_height="38dip"
                android:background="@drawable/input_bg"
                android:hint="@string/account_hint"
                android:inputType="textPersonName"
                android:maxLength="12"
                android:singleLine="true" />

            <TextView
                style="@style/login_tv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:text="@string/account_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/register_et_yzm"
                style="@style/black_14_style"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:layout_weight="1"
                android:background="@drawable/input_bg"
                android:hint="@string/mobile_yzm"
                android:inputType="textPersonName"
                android:singleLine="true" />

            <Button
                android:id="@+id/register_btn_yzm"
                style="@style/white_text_style_16"
                android:layout_width="match_parent"
                android:layout_height="38dip"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="10dip"
                android:layout_weight="2"
                android:background="@drawable/xzbx"
                android:gravity="center"
                android:text="@string/mobile_yzm" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_password"
                style="@style/login_et_style"
                android:layout_width="fill_parent"
                android:layout_height="38dip"
                android:background="@drawable/input_bg"
                android:hint="@string/login_password_hint"
                android:maxLength="12"
                android:password="true"
                android:singleLine="true" />

            <TextView
                style="@style/login_tv_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dip"
                android:layout_marginTop="5dip"
                android:gravity="right"
                android:text="@string/login_password_desc" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_repassword"
                style="@style/login_et_style"
                android:layout_width="fill_parent"
                android:layout_height="38dip"
                android:background="@drawable/input_bg"
                android:hint="@string/re_password_hint"
                android:maxLength="12"
                android:password="true"
                android:singleLine="true" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="30dip"
        android:layout_marginRight="30dip"
        android:layout_weight="0.15"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_register"
            style="@style/login_b_style"
            android:layout_width="fill_parent"
            android:layout_height="38dip"
            android:background="@drawable/login_button_normal"
            android:text="@string/register_immi" />
    </LinearLayout>

</LinearLayout>